WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118144
Fix the CLoop LLINT build on the FTL branch
https://bugs.webkit.org/show_bug.cgi?id=118144
Summary
Fix the CLoop LLINT build on the FTL branch
Mark Hahnenberg
Reported
2013-06-27 12:25:40 PDT
We should probably fix this.
Attachments
the patch
(6.67 KB, patch)
2013-07-11 16:52 PDT
,
Mark Lam
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2013-07-11 16:52:49 PDT
Created
attachment 206496
[details]
the patch
Mark Hahnenberg
Comment 2
2013-07-11 16:57:29 PDT
Comment on
attachment 206496
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=206496&action=review
r=me with comment.
> Source/JavaScriptCore/runtime/Structure.cpp:36 > +#include <wtf/CommaPrinter.h>
Do we need this?
Mark Lam
Comment 3
2013-07-11 16:58:28 PDT
(In reply to
comment #2
)
> (From update of
attachment 206496
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=206496&action=review
> > r=me with comment. > > > Source/JavaScriptCore/runtime/Structure.cpp:36 > > +#include <wtf/CommaPrinter.h> > > Do we need this?
I added it because the compiler was complaining without it. So, yes, it's needed.
Mark Hahnenberg
Comment 4
2013-07-11 16:58:57 PDT
(In reply to
comment #3
)
> (In reply to
comment #2
) > > (From update of
attachment 206496
[details]
[details]) > > View in context:
https://bugs.webkit.org/attachment.cgi?id=206496&action=review
> > > > r=me with comment. > > > > > Source/JavaScriptCore/runtime/Structure.cpp:36 > > > +#include <wtf/CommaPrinter.h> > > > > Do we need this? > > I added it because the compiler was complaining without it. So, yes, it's needed.
Fair enough, sounds good!
Mark Lam
Comment 5
2013-07-11 17:01:41 PDT
Landed in
r152581
: <
http://trac.webkit.org/changeset/152581
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug