Source/JavaScriptCore/jit/JITCode.cpp
@@ -40,11 +40,13 @@ JITCode::~JITCode()
 {
 }
 
+#if ENABLE(JIT)
 JSValue JITCode::execute(JSStack* stack, CallFrame* callFrame, VM* vm)
 {
     JSValue result = JSValue::decode(ctiTrampoline(executableAddress(), stack, callFrame, 0, 0, vm));
     return vm->exception ? jsNull() : result;
 }
+#endif
 
 DFG::CommonData* JITCode::dfgCommon()
 {
